<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<groupId>eu.stamp-project</groupId>
	<artifactId>reneri</artifactId>
	<version>1.0-SNAPSHOT</version>
    <packaging>maven-plugin</packaging>


    <name>Reneri</name>
    <url>https://github.com/STAMP-project/reneri.git</url>

    <organization>
        <name>STAMP-Project</name>
        <url>http://github.com/STAMP-project</url>
    </organization>

    <licenses>
        <license>
            <name>GNU Lesser General Public License v3.0</name>
            <url>https://github.com/STAMP-project/reneri/blob/master/LICENSE</url>
        </license>
    </licenses>

    <issueManagement>
        <system>GitHub</system>
        <url>https://github.com/STAMP-project/reneri/issues</url>
    </issueManagement>

    <developers>
        <developer>
            <name>Oscar Luis Vera Pérez</name>
            <email>oscar.vera-perez@inria.fr</email>
        </developer>
    </developers>

    <scm>
        <connection>scm:git:git://github.com:STAMP-project/reneri.git</connection>
        <developerConnection>scm:git:git@github.com:STAMP-project/reneri.git</developerConnection>
        <url>https://github.com/STAMP-project/reneri</url>
        <tag>HEAD</tag>
    </scm>

    <distributionManagement>
        <snapshotRepository>
            <id>ossrh-snapshots</id>
            <url>https://oss.sonatype.org/content/repositories/snapshots/</url>
        </snapshotRepository>
        <repository>
            <id>ossrh</id>
            <url>https://oss.sonatype.org/service/local/staging/deploy/maven2/</url>
        </repository>
    </distributionManagement>

    <properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<java.version>1.8</java.version>
	</properties>

	<build>
		<plugins>

            <!-- Source version -->
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.7.0</version>
				<configuration>
					<source>${java.version}</source>
					<target>${java.version}</target>
				</configuration>
			</plugin>

            <!-- Maven plugin creation -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-plugin-plugin</artifactId>
                <version>3.5</version>
            </plugin>
		</plugins>

        <resources>
            <resource>
                <directory>
                    src/main/java/eu/stamp_project/reneri/instrumentation/
                </directory>
                <includes>
                    <include>StateObserver.java</include>
                </includes>
                <targetPath>utils</targetPath>
            </resource>
        </resources>
    </build>


	<dependencies>

        <!-- Source code instrumentation -->
		<dependency>
			<groupId>fr.inria.gforge.spoon</groupId>
			<artifactId>spoon-core</artifactId>
			<version>7.1.0</version>
		</dependency>

        <!-- Maven Plugin -->
        <dependency>
            <groupId>org.apache.maven</groupId>
            <artifactId>maven-plugin-api</artifactId>
            <version>3.5.0</version>
        </dependency>

        <!-- Annotations -->
        <dependency>
            <groupId>org.apache.maven.plugin-tools</groupId>
            <artifactId>maven-plugin-annotations</artifactId>
            <version>3.5</version>
            <scope>provided</scope>
        </dependency>

		<!-- Access to the project structure -->
		<dependency>
			<groupId>org.apache.maven</groupId>
			<artifactId>maven-core</artifactId>
			<version>3.5.2</version>
		</dependency>

        <!-- Serialization -->
		<dependency>
			<groupId>com.google.code.gson</groupId>
			<artifactId>gson</artifactId>
			<version>2.8.0</version>
		</dependency>

        <!-- Extreme transformations -->
		<dependency>
			<groupId>eu.stamp-project</groupId>
			<artifactId>descartes</artifactId>
			<version>1.2.4</version>
		</dependency>

		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<version>4.12</version>
			<scope>test</scope>
		</dependency>
	</dependencies>

	<repositories>
        <!-- Additional dependency for Spoon -->
		<repository>
			<id>inria</id>
			<name>triskell-public-release</name>
			<url>http://maven.inria.fr/artifactory/triskell-public-release</url>
		</repository>
	</repositories>

</project>
